remove unnecessary roaster template, add new Typika coffees, fix roaster image overflow

--- a/packages/coffee.chealt.com/src/components/coffees/filtered-list.css
+++ b/packages/coffee.chealt.com/src/components/coffees/filtered-list.css
@@ -32,6 +32,7 @@
     display: block;
     width: 100%;
     height: auto;
+    max-height: 100%;
     border-radius: var(--border-radius);
   }
 }
